--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,9 +70,9 @@ dependencies {
     kapt "android.arch.persistence.room:compiler:1.1.0-alpha1"
 
     //there's a conflict in the test libraries here, so we have to explicitly set these
-    testImplementation 'org.jetbrains.kotlin:kotlin-reflect:1.2.20'
-    testImplementation 'org.jetbrains.kotlin:kotlin-stdlib:1.2.20'
-    testImplementation("android.arch.core:core-testing:1.0.0-alpha9", {
+    testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    testImplementation("android.arch.core:core-testing:1.1.0", {
         exclude group: 'com.android.support', module: 'support-compat'
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.android.support', module: 'support-core-utils'
