--- a/.circle/config.yml
+++ b/.circle/config.yml
@@ -7,10 +7,9 @@ jobs:
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
-      - run:
-        name: Update SDKManager
-        command: sdkmanager --update && yes | sdkmanager --licenses
       - checkout
+        post:
+          - cp -r licenses/. $ANDROID_HOME/licenses
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
 #      - run:
