--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,11 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.android.support', module: 'support-core-utils'
     })
+
+    implementation 'org.koin:koin-android:1.0.2'
+    implementation 'org.koin:koin-androidx-scope:1.0.2'
+    implementation 'org.koin:koin-androidx-viewmodel:1.0.2'
+    testImplementation 'org.koin:koin-test:1.0.2'
 }
 
 task ktlint(type: JavaExec) {
