--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,10 @@ dependencies {
     implementation 'org.koin:koin-androidx-scope:1.0.2'
     implementation 'org.koin:koin-androidx-viewmodel:1.0.2'
     testImplementation 'org.koin:koin-test:1.0.2'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.3'
 }
 
 task ktlint(type: JavaExec) {
