--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,10 +121,10 @@ task testReport(type: JacocoReport, dependsOn: "testDebugUnitTest") {
                       '**/*Component*.*', //Dagger2 generated code
                       '**/*Module*.*', //Dagger2 generated code
     ]
-    def debugTree = fileTree(dir: "${buildDir}/intermediates/classes/debug/com/rocketinsights/android", excludes: fileFilter)
-    def mainSrc = "${project.projectDir}/src/main/java"
-    sourceDirectories = files([mainSrc])
-    classDirectories = files([debugTree])
-    executionData = fileTree(dir: project.projectDir, includes:
-            ['**/*.exec', '**/*.ec'])
+    def debugTree = fileTree(dir: "$buildDir/intermediates/classes/debug/com/rocketinsights/android", excludes: fileFilter)
+    def kotlinDebugTree = fileTree(dir: "$buildDir/tmp/kotlin-classes/debug", excludes: fileFilter)
+    def mainSrc = "$project.projectDir/src/main/java"
+    getSourceDirectories().setFrom(files([mainSrc]))
+    getClassDirectories().setFrom(files([debugTree], [kotlinDebugTree]))
+    getExecutionData().setFrom(fileTree(dir: project.projectDir, includes: ['**/*.exec', '**/*.ec']))
 }
