--- a/bitrise.yml
+++ b/bitrise.yml
@@ -3,65 +3,65 @@ format_version: '4'
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 project_type: android
 trigger_map:
-- push_branch: "*"
-  workflow: primary
-- pull_request_source_branch: "*"
-  workflow: primary
-- tag: "*"
-  workflow: deploy
+  - push_branch: "*"
+    workflow: primary
+  - pull_request_source_branch: "*"
+    workflow: primary
+  - tag: "*"
+    workflow: deploy
 workflows:
   deploy:
     steps:
-    - activate-ssh-key@3.1.1:
-        run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
-    - git-clone@4.0.7: {}
-    - cache-pull@2.0.1: {}
-    - script@1.1.5:
-        title: Run Linters
-        inputs:
-          - content: |-
-              #!/usr/bin/env bash
-              # fail if any commands fails
-              set -e
-              # debug log
-              set -x
-
-              # write your script here
-              ./gradlew clean
-              ./gradlew ktlint
-              ./gradlew lintRelease
-    - install-missing-android-tools@2.1.1: {}
-    - gradle-runner@1.8.2:
-        inputs:
-        - gradle_file: "$GRADLE_BUILD_FILE_PATH"
-        - gradle_task: clean assembleRelease
-        - gradlew_path: "$GRADLEW_PATH"
-    - gradle-unit-test@1.0.5:
-        inputs:
-          - unit_test_task: testDebugUnitTest
-    - deploy-to-bitrise-io@1.3.10: {}
-    - cache-push@2.0.5: {}
+      - activate-ssh-key@3.1.1:
+          run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
+      - git-clone@4.0.7: {}
+      - cache-pull@2.0.1: {}
+      - script@1.1.5:
+          title: Do anything with Script step
+      - install-missing-android-tools@2.1.1: {}
+      - gradle-runner@1.8.2:
+          inputs:
+            - gradle_file: "$GRADLE_BUILD_FILE_PATH"
+            - gradle_task: assembleRelease
+            - gradlew_path: "$GRADLEW_PATH"
+      - deploy-to-bitrise-io@1.3.10: {}
+      - cache-push@2.0.5: {}
   primary:
     steps:
-    - activate-ssh-key@3.1.1:
-        run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
-    - git-clone@4.0.7: {}
-    - cache-pull@2.0.1: {}
-    - script@1.1.5:
-        title: Do anything with Script step
-    - install-missing-android-tools@2.1.1: {}
-    - gradle-runner@1.8.2:
-        inputs:
-        - gradle_file: "$GRADLE_BUILD_FILE_PATH"
-        - gradle_task: clean assembleDebug
-        - gradlew_path: "$GRADLEW_PATH"
-    - deploy-to-bitrise-io@1.3.10: {}
-    - cache-push@2.0.5: {}
+      - activate-ssh-key@4.0.3:
+          run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
+      - git-clone@4.0.14: {}
+      - cache-pull@2.0.1: {}
+      - script@1.1.5:
+          title: Run Linters
+          inputs:
+            - content: |-
+                #!/usr/bin/env bash
+                # fail if any commands fails
+                set -e
+                # debug log
+                set -x
+
+                ./gradlew clean
+                ./gradlew ktlint
+                ./gradlew lintRelease
+      - install-missing-android-tools@2.3.5: {}
+      - gradle-runner@1.8.5:
+          inputs:
+            - gradle_file: "$GRADLE_BUILD_FILE_PATH"
+            - gradle_task: clean assembleDebug
+            - gradlew_path: "$GRADLEW_PATH"
+      - android-unit-test@0.9.6: {}
+      - virtual-device-testing-for-android@1.0.5:
+          inputs:
+            - test_type: instrumentation
+      - deploy-to-bitrise-io@1.3.19: {}
+      - cache-push@2.1.1: {}
 app:
   envs:
-  - opts:
-      is_expand: false
-    GRADLE_BUILD_FILE_PATH: build.gradle
-  - opts:
-      is_expand: false
-    GRADLEW_PATH: "./gradlew"
+    - opts:
+        is_expand: false
+      GRADLE_BUILD_FILE_PATH: build.gradle
+    - opts:
+        is_expand: false
+      GRADLEW_PATH: "./gradlew"
