--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,12 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
+    implementation 'com.squareup.moshi:moshi-kotlin:1.8.0'
+    kapt('com.squareup.moshi:moshi-kotlin-codegen:1.8.0')
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.5.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 }
 
 task ktlint(type: JavaExec) {
