--- a/.gitignore
+++ b/.gitignore
@@ -33,20 +33,9 @@ proguard/
 # Android Studio captures folder
 captures/
 
-# IntelliJ
+# Android Studio
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/assetWizardSettings.xml
-.idea/dictionaries
-.idea/libraries
-.idea/caches
-# Android Studio 3 in .gitignore file.
-.idea/caches/build_file_checksums.ser
-.idea/modules.xml
-.idea/encodings.xml
-.idea/misc.xml
+.idea
 
 # Keystore files
 *.jks
