--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,9 +84,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-core-utils'
     })
 
-    implementation 'org.koin:koin-android:1.0.2'
-    implementation 'org.koin:koin-androidx-scope:1.0.2'
-    implementation 'org.koin:koin-androidx-viewmodel:1.0.2'
+    implementation 'org.koin:koin-android:2.0.1'
+    implementation 'org.koin:koin-androidx-scope:2.0.1'
+    implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
     testImplementation 'org.koin:koin-test:1.0.2'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
@@ -106,7 +106,7 @@ dependencies {
     kapt('com.squareup.moshi:moshi-kotlin-codegen:1.8.0')
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.5.0'
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation 'com.jakewh517176arton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
     testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1'
