--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,6 @@ apply from: 'jacoco.gradle'
 
 // If code style check fails do not try to make a build
 apply from: 'lint.gradle'
-check.dependsOn ktlint
 
 repositories {
     mavenCentral()
@@ -48,7 +47,7 @@ android {
 ext {
     legacy_version = "1.0.0"
     constraint_layout_version = "2.0.0-alpha2"
-    ktlint_version = "0.29.0"
+    ktlint_version = "0.33.0"
     koin_version = "2.0.1"
     appCompat_version = "1.1.0-alpha04"
     material_design_version = "1.1.0-alpha07"
@@ -82,7 +81,7 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
 
     // Code style
-    ktlint "com.github.shyiko:ktlint:$ktlint_version"
+    ktlint "com.pinterest:ktlint:$ktlint_version"
 
     //Logs
     implementation "com.jakewharton.timber:timber:$timber_version"
