--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ ext {
     moshi_version = "1.8.0"
     retrofit_version = "2.5.0"
     coroutine_adapter_version = "0.9.2"
-    leack_canary_version = "1.6.3"
+    leak_canary_version = "1.6.3"
     lifecycle_version = "2.1.0-alpha04"
     room_version = "2.1.0-alpha07"
     glide_version = "4.9.0"
@@ -122,9 +122,9 @@ dependencies {
     testImplementation "org.koin:koin-test:$koin_version"
 
     //Leak detection
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leack_canary_version"
-    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leack_canary_version"
-    debugImplementation "com.squareup.leakcanary:leakcanary-support-fragment:$leack_canary_version"
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leak_canary_version"
+    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leak_canary_version"
+    debugImplementation "com.squareup.leakcanary:leakcanary-support-fragment:$leak_canary_version"
 
     // Test
     // Unit testing framework
