--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,11 +16,11 @@ repositories {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
     defaultConfig {
         applicationId "com.rocketinsights.android"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -35,6 +35,13 @@ android {
             proguardFiles fileTree('proguard-libs').asList().toArray()
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
     testOptions {
         unitTests.all {
             jacoco {
@@ -46,30 +53,32 @@ android {
 
 ext {
     legacy_version = "1.0.0"
-    constraint_layout_version = "2.0.0-alpha2"
+    constraint_layout_version = "2.0.4"
     ktlint_version = "0.33.0"
-    koin_version = "2.0.1"
-    appCompat_version = "1.1.0-alpha04"
-    material_design_version = "1.1.0-alpha07"
-    coroutines_version = "1.2.1"
+    koin_version = "2.2.2"
+    appCompat_version = "1.2.0"
+    material_design_version = "1.3.0"
+    coroutines_version = "1.4.2"
     timber_version = "4.7.1"
-    moshi_version = "1.8.0"
-    retrofit_version = "2.5.0"
+    moshi_version = "1.11.0"
+    retrofit_version = "2.9.0"
     coroutine_adapter_version = "0.9.2"
     leak_canary_version = "1.6.3"
-    lifecycle_version = "2.1.0-alpha04"
-    room_version = "2.1.0-alpha07"
-    glide_version = "4.9.0"
+    lifecycle_extensions = "2.2.0"
+    lifecycle_version = "2.3.0"
+    room_version = "2.2.6"
+    glide_version = "4.12.0"
     navigation_version = "1.0.0"
-    junit_version = "1.1.0"
+    junit_version = "1.1.2"
     test_rule_version = "1.0.2"
-    mockito_version = "2.1.0"
+    mockito_version = "2.2.0"
     espresso_version = "3.1.1"
-    core_testing_version = "2.0.0"
+    core_testing_version = "2.1.0"
+    mockito_inline_version = "2.28.2"
 }
 
 jacoco {
-    toolVersion = "0.7.5.201505241946"
+    toolVersion = "0.8.5"
 }
 
 dependencies {
@@ -77,7 +86,7 @@ dependencies {
     implementation "androidx.legacy:legacy-support-v4:$legacy_version"
     implementation "androidx.appcompat:appcompat:$appCompat_version"
     implementation "com.google.android.material:material:$material_design_version"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
 
     // Code style
@@ -88,7 +97,7 @@ dependencies {
 
     // Retrofit
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
-    kapt("com.squareup.moshi:moshi-kotlin-codegen:$moshi_version")
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$coroutine_adapter_version"
@@ -98,14 +107,15 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     // Android Lifecycle
-    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_extensions"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
     // Room
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
     // Navigation
     implementation "android.arch.navigation:navigation-fragment-ktx:$navigation_version"
@@ -113,7 +123,7 @@ dependencies {
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
 
     // Koin
     implementation "org.koin:koin-android:$koin_version"
@@ -134,6 +144,7 @@ dependencies {
 
     // Mockito
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockito_version"
+    testImplementation "org.mockito:mockito-inline:$mockito_inline_version"
 
     // Test Coroutines
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
