--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,10 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.3.31'
-        gradle_version = '3.4.1'
+        kotlin_version = '1.4.30'
+        gradle_version = '4.1.2'
+        dependency_check_version = '6.1.1'
+        gradle_versions_version = '0.36.0'
     }
     repositories {
         jcenter()
@@ -17,8 +19,8 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
-        classpath 'org.owasp:dependency-check-gradle:4.0.1'
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
+        classpath "org.owasp:dependency-check-gradle:$dependency_check_version"
+        classpath "com.github.ben-manes:gradle-versions-plugin:$gradle_versions_version"
     }
 }
 
