--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'jacoco'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.github.ben-manes.versions'
+apply plugin: 'androidx.navigation.safeargs'
 apply from: 'jacoco.gradle'
 
 // If code style check fails do not try to make a build
@@ -72,7 +73,6 @@ ext {
     lifecycle_version = "2.3.0"
     room_version = "2.2.6"
     glide_version = "4.12.0"
-    navigation_version = "1.0.0"
     junit_version = "1.1.2"
     test_rule_version = "1.0.2"
     mockito_version = "2.2.0"
@@ -122,8 +122,8 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
 
     // Navigation
-    implementation "android.arch.navigation:navigation-fragment-ktx:$navigation_version"
-    implementation "android.arch.navigation:navigation-ui-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
