--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         gradle_version = '4.1.2'
         dependency_check_version = '6.1.1'
         gradle_versions_version = '0.36.0'
+        navigation_version = "2.3.3"
     }
     repositories {
         jcenter()
@@ -15,7 +16,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
