--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,13 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'jacoco'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'com.github.ben-manes.versions'
-apply from: 'jacoco.gradle'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'jacoco'
+    id 'androidx.navigation.safeargs'
+    id 'com.github.ben-manes.versions'
+}
 
+apply from: 'jacoco.gradle'
 // If code style check fails do not try to make a build
 apply from: 'lint.gradle'
 
@@ -62,7 +65,7 @@ ext {
     koin_version = "2.2.2"
     appCompat_version = "1.2.0"
     material_design_version = "1.3.0"
-    coroutines_version = "1.4.2"
+    coroutines_version = "1.4.3"
     timber_version = "4.7.1"
     moshi_version = "1.11.0"
     retrofit_version = "2.9.0"
@@ -72,7 +75,6 @@ ext {
     lifecycle_version = "2.3.0"
     room_version = "2.2.6"
     glide_version = "4.12.0"
-    navigation_version = "1.0.0"
     junit_version = "1.1.2"
     test_rule_version = "1.0.2"
     mockito_version = "2.2.0"
@@ -122,8 +124,8 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
 
     // Navigation
-    implementation "android.arch.navigation:navigation-fragment-ktx:$navigation_version"
-    implementation "android.arch.navigation:navigation-ui-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
