Bitrise workflow update. Bitrise yml is attached (although not necessary for it to work, it is for future reference only).
What I did was create 3 main workflows using modules to be able to update the steps more easily:
- pull-request: Triggered every time a PR is made. Run lints and test.
- devDebug: Triggered when something is pushed to master. It executes the same as pull-request and also generates a build devDebug.
- prodRelease: Triggered when a tag is generated. It executes the same as pull-request and also generates a release build.

Add flavors to make build generation more flexible according to available environments.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,11 +30,35 @@ android {
     buildTypes {
         debug {
             testCoverageEnabled true
+
+            minifyEnabled false
+            shrinkResources false
         }
         release {
-            minifyEnabled false
+            // Use default Signing Config - CI System set the production signing configs.
+            signingConfig signingConfigs.debug
+
+            minifyEnabled true
+            shrinkResources true
+
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             proguardFiles fileTree('proguard-libs').asList().toArray()
+        }
+    }
+    flavorDimensions "default"
+    productFlavors {
+        dev {
+            dimension "default"
+
+            manifestPlaceholders = [appName: "@string/app_name_dev"]
+            applicationIdSuffix ".dev"
+            versionNameSuffix "-dev"
+        }
+
+        prod {
+            dimension "default"
+
+            manifestPlaceholders = [appName: "@string/app_name"]
         }
     }
     // Enables view binding.
