--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,34 +115,34 @@ android {
 ext {
     legacy_version = "1.0.0"
     constraint_layout_version = "2.0.4"
-    ktlint_version = "0.33.0"
-    koin_version = "3.0.1-beta-1"
+    ktlint_version = "0.41.0"
+    koin_version = "3.0.1-beta-2"
     appCompat_version = "1.2.0"
     material_design_version = "1.3.0"
     coroutines_version = "1.4.3"
     timber_version = "4.7.1"
-    moshi_version = "1.11.0"
+    moshi_version = "1.12.0"
     retrofit_version = "2.9.0"
-    leak_canary_version = "2.6"
+    leak_canary_version = "2.7"
     lifecycle_extensions = "2.2.0"
-    lifecycle_version = "2.3.0"
+    lifecycle_version = "2.3.1"
     room_version = "2.2.6"
     coil_version = "1.1.1"
     junit_version = "1.1.2"
     test_rule_version = "1.0.2"
-    mockito_version = "2.2.0"
+    mockito_version = "3.1.0"
     espresso_version = "3.1.1"
     core_testing_version = "2.1.0"
-    mockito_inline_version = "2.28.2"
-    firebase_version = "26.6.0"
+    mockito_inline_version = "3.9.0"
+    firebase_version = "27.0.0"
     firebase_ui_version = "7.1.1"
     kotlinx_coroutines_play_services_version = "1.4.3"
     datastore_version = "1.0.0-alpha08"
-    ktx_activity_version = "1.3.0-alpha04"
-    ktx_fragment_version = "1.3.0"
+    ktx_activity_version = "1.3.0-alpha06"
+    ktx_fragment_version = "1.3.2"
     play_services_maps_version = "17.0.0"
     play_services_location_version = "18.0.0"
-    google_maps_utils_version = "2.2.0"
+    google_maps_utils_version = "2.2.2"
     quickpermissions_version = "0.4.1"
     work_version = "2.5.0"
     ok_http_version = "4.9.0"
@@ -247,7 +247,7 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$junit_version"
 
     // Mockito
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockito_version"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:$mockito_version"
     testImplementation "org.mockito:mockito-inline:$mockito_inline_version"
 
     // Test Coroutines
